# fastapi-clean-archi

./: .gitignore  MANIFEST.in  README.md  main.py  manage.py  manage2.py  pyproject.toml  requirements.txt
fastapi_clean_archi/: cli.py
fastapi_clean_archi/core/db/: base.py
fastapi_clean_archi/managements/commands/: add_module.py  base.py  check.py  makemigrations.py  runserver.py
fastapi_clean_archi/managements/templates/: manage.tmpl
fastapi_clean_archi/managements/templates/app_module/infrastructure/: models.tmpl
fastapi_clean_archi/managements/templates/core/: config.tmpl
fastapi_structure/: cli.py
fastapi_structure/managements/commands/: add_module.py  base.py  makemigrations.py  migrate.py  runserver.py
fastapi_structure/managements/templates/: main.tmpl  manage.tmpl
fastapi_structure/managements/templates/app_module/infrastructure/: repository.tmpl
fastapi_structure/managements/templates/app_module/services/: service.tmpl
fastapi_structure/managements/templates/core/: config.tmpl
fastapi_structure/managements/templates/core/db/: __init__.tmpl  base.tmpl
templates/app_module/infrastructure/: repository.tmpl
templates/app_module/services/: service.tmpl
templates/core/: config.tmpl  manage_jwt.tmpl  password.tmpl
