[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-structure"
version = "0.3.0"
description = "Command-driven FastAPI"
authors = [{name="YuJeonghoon", email="moning02004@naver.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "SQLAlchemy",
    "PyJWT",
    "pytest",
    "alembic",
    "pydantic",
    "python-dotenv",
    "bcrypt==4.0.1",
    "typer"
]

[project.scripts]
fastapi-setup = "fastapi_structure.cli:create_core"

[tool.setuptools.packages.find]
include = ["fastapi_structure*"]
