[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-clean-archi"
version = "0.4.2"
description = "FastAPI with clean architecture"
authors = [{name="YuJeonghoon", email="moning02004@naver.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn",
    "SQLAlchemy",
    "PyJWT",
    "pytest",
    "alembic",
    "python-dotenv",
    "bcrypt==4.0.1",
    "typer"
]

[project.scripts]
fastapi-setup = "fastapi_clean_archi.cli:create_core"

[tool.setuptools.packages.find]
include = ["fastapi_clean_archi*"]

[project.urls]
"Homepage" = "https://github.com/moning02004/fastapi-clean-archi"
"Bug Tracker" = "https://github.com/moning02004/fastapi-clean-archi/issues"
